# aihero

./: README.md
course/day-01-ingest/: README.md  main.py  pyproject.toml
course/day-01-ingest/notebooks/: day-01.ipynb  day02_hybrid_chunks.json
project/: README.md
